djvusmooth (0.2.3) UNRELEASED; urgency=low

  * Allow to turn off the “allow visible” property of a border hyperlink.
    Thanks to Janusz S. Bień for the bug report.
    http://bugs.debian.org/574362
  * Disable the “allow visible” checkbox if a hyperlink has no border.
    http://bugs.debian.org/574338

 -- Jakub Wilk <jwilk@jwilk.net>  Wed, 17 Mar 2010 18:11:30 +0100

djvusmooth (0.2.2) unstable; urgency=low

  * Fix crashes in the ‘Saving document’ and ‘Go to page’ dialogs.
  * Fix compatibility with wxWidgets 2.8.
  * Give a more helpful error messages if djvused is not available.

 -- Jakub Wilk <jwilk@jwilk.net>  Fri, 22 Jan 2010 19:36:03 +0100

djvusmooth (0.2.1) unstable; urgency=low

  * Don't crash on non-ASCII file names.
    Thanks to Jean-Christophe Heger for the bug report.

 -- Jakub Wilk <jwilk@jwilk.net>  Mon, 11 Jan 2010 18:27:28 +0100

djvusmooth (0.2.0) unstable; urgency=low

  * Remember last visited directory.
    Thanks to Mateusz Turcza for providing a patch.
  * Follow the XDG Base Directory Specification.
  * Add Polish translation of the manual page.
    Thanks to Mateusz Turcza for providing a patch.
  * Fix a typo in variable name that was causing random crashes.
  * Provide a manual page.

 -- Jakub Wilk <jwilk@jwilk.net>  Fri, 20 Nov 2009 22:45:08 +0100

djvusmooth (0.1.4) unstable; urgency=low

  * Fix some issues with external editing.

 -- Jakub Wilk <jwilk@jwilk.net>  Mon, 02 Mar 2009 23:36:21 +0100

djvusmooth (0.1.3) unstable; urgency=low

  * Don't assume UTF-8 locale and UTF-8-encoded text in DjVu files.

 -- Jakub Wilk <jwilk@jwilk.net>  Mon, 07 Jul 2008 01:12:34 +0200

djvusmooth (0.1.2) unstable; urgency=low

  * Fix bookmarking current page when there are no bookmarks.
  * Fix flattening text.

 -- Jakub Wilk <jwilk@jwilk.net>  Tue, 20 May 2008 12:49:30 +0200

djvusmooth (0.1.1) unstable; urgency=low

  * Don't require pkg-config nor develoment files of DjVuLibre.
