@@ -5,6 +5,7 @@ djvusmooth (0.2.3) UNRELEASED; urgency=low
     http://bugs.debian.org/574362
   * Disable the “allow visible” checkbox if a hyperlink has no border.
     http://bugs.debian.org/574338
+  * Display real border width for hyperlinks istead of hardcoded 1.
 
  -- Jakub Wilk <jwilk@jwilk.net>  Wed, 17 Mar 2010 18:11:30 +0100
 
